--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@barba/core": "^2.10.3",
+    "@react-three/drei": "^9.121.1",
+    "@react-three/fiber": "^8.17.12",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.0",
+    "gsap": "^3.12.7",
+    "lucide-react": "^0.471.1",
+    "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "sass": "^1.83.4",
+    "sonner": "^1.7.2",
+    "three": "^0.172.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
