--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.0",
     "gsap": "^3.12.7",
+    "lenis": "^1.1.19",
     "lucide-react": "^0.471.1",
     "next": "14.2.23",
     "react": "^18",
